# selenium_ui_shop_tests

./: .gitignore  .travis.yml  Makefile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
common/: constans.py  logging.py  utils.py
fixture/: application.py  login.py  login_page.py  main_page.py
locators/: login.py  main_page.py
model/: login.py  product_cart.py
tests/: test_auth.py  test_main_page.py
