[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["litovsky <berpress@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6"
selenium = "^3.141.0"
flake8 = "^3.7.9"
pytest = "^5.4.1"
webdriver_manager = "^2.3.0"
faker = "^4.0.3"
allure-pytest = "^2.8.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
